<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Habr Time Zones</string>
    <string name="action_settings">Settings</string>
    <string name="Cancel">Cancel</string>
	<string name="Save">Save</string>
	<string name="YouAreHere">You are here</string>
	<string name="ThisPlace">Use this place</string>
	<string name="ThisPlaceDesc">Press save</string>
	<string name="Position">Current position</string>
	<string name="empty"></string>
	<string name="DescInit">Setting up the location using GSM-base or GPS. Please, wait. Or press \"Cancel" and enter coordinates manually.</string>
	<string name="LatMos">55.753636</string>
	<string name="LonMos">37.619799</string>
	<string name="Latitude">Latitude:</string>
	<string name="Longitude">Longitude:</string>
	<string name="UsedPos">Used Coordinates:</string>
	<string name="CommitCurCoords">Copy current coordinates to edit text fields</string>
	<string name="GoogleMap">Google Maps</string>
	<string name="Canceled">Canceled</string>
	<string name="TimeZone">Time zone</string>
	<string name="Error">value of ErrorTZ</string>
	<string name="CurName">the place name:</string>
	<string name="Search">Search</string>
	<string name="CitiesOnLine">List of places Online</string>
	<string-array name="ew_ar">
	    <item>E</item>
	    <item>W</item>
	</string-array>
	<string-array name="ns_ar">
	    <item>N</item>
	    <item>S</item>
	</string-array>
</resources>
